# clockify-qb-importer

./: .gitignore  CHANGELOG.md  Durations.xlsx  README.md  aligned_vision_qb.py  gr_importing.py  importing.ipynb  invoice_app.py  process_csv.ipynb  pyproject.toml  qb_columns.csv  requirements.txt  utils.py
data/: oct-2023-durations.xlsx
src/qb_import/: cli.py  constants.py  utils.py
